# parproga

./: README.md
1/: CMakeLists.txt
1/code/include/: factorial.h
1/code/src/: factorial.cpp  main.cpp
2/code/src/: 1.cpp
laba_2/: CMakeLists.txt
laba_2/include/: integration.h
laba_2/src/: integration.cpp  main.cpp
sem_1/1/: CMakeLists.txt
sem_1/1/code/src/: factorial.cpp
sem_1/2/: CMakeLists.txt
sem_1/laba_2/src/: integration.cpp  main.cpp
sem_2/: CMakeLists.txt
sem_2/BaseOpenMP/: 1.cpp  2.cpp  3.cpp
sem_2/BorderedEquation/: answer_grath.py  border_eq.cpp  working_time_graph.py
sem_2/laba_2/: 1z-paralelled.cpp  1z.cpp  origin.cpp
